// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issuesToFindings > emits findings at nested paths 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`compatibility.requires[1]\` has the wrong type. Detail: Expected string, got 42. Replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;

exports[`issuesToFindings > emits one finding per invalid top-level field 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`name\` has the wrong type. Detail: Expected string, got 123. Replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`version\` has the wrong type. Detail: Expected string, got 456. Replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`owner\` has the wrong type. Detail: Expected string, got true. Replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest field \`description\` has the wrong type. Detail: Expected string, got null. Replace it with a value of the expected type.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;

exports[`issuesToFindings > emits one finding per missing top-level key 1`] = `
[
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`version\`. Add \`version\` at the referenced location.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`owner\`. Add \`owner\` at the referenced location.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
  {
    "kind": "advisory",
    "location": {
      "file": "skill.json",
    },
    "message": "Skill manifest is missing required field \`description\`. Add \`description\` at the referenced location.",
    "ruleId": "skill/manifest-schema-valid",
    "severity": "error",
  },
]
`;
